@@ -1,5 +1,7 @@
 2006-06-11  Ales Hakl  <ales at hakl dot net>
 
+	* dfsch/dfsch.h: Added documentation comments to argument macros
+
 	* *: Removed all references of dfsch_make_string() and dfsch_string()
 
 2006-06-07  Ales Hakl  <ales at hakl dot net>
